fix: strange hover behavior on mobile

--- a/src/app.css
+++ b/src/app.css
@@ -10,3 +10,8 @@ body {
 
 	background-color: black;
 }
+@media (hover: hover) and (pointer: fine) {
+  .hover\:underline:hover {
+    text-decoration-line: underline;
+  }
+}
